client/css/reports-manager.css
/* ... */
			#stage-define-report #filters h3 + p {
				color: var(--color-grey);
			}
			#stage-define-report #filters .toolbar {
				overflow: auto;
			}
				#stage-define-report #filters .toolbar .filter-info {
					text-align: right;
					white-space: nowrap;
					font-size: 85%;
				}
			#stage-define-report #filters table,
			#stage-define-report #filters .form {
				background: var(--color-surface);
				color: var(--color-surface-text);
				box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
			}
				#stage-define-report #filters table tr.red {
					background: rgba(175, 0, 0, 0.25);
				}
				#stage-define-report #filters table .action {
					width: auto;
				}
				#stage-define-report #filters table .action.grey:hover {
					background: unset;
					color: #888;
				}
				#stage-define-report #filters table .trusted .NA {
					font-size: 80%;
					margin-left: var(--gap);
				}
			#stage-define-report #filters .form {
				grid-template-columns: 1fr;
				align-items: flex-start;
			}
				#stage-define-report #filters .form .toolbar {
					margin: calc(var(--gap) * -2);
				}
				#stage-define-report #filters .edit-filter .toolbar {
					grid-template-columns: max-content max-content 1fr;
					align-items: center;
					grid-column: 1 / 3;
				}
				#stage-define-report #filters .form .label {
					grid-row: span 2;
				}
			#stage-define-report #filters #external-parameters,
			#stage-define-report #filters #suggested-filters {
				margin-top: 40px;
			}
		#stage-define-report .query-history {
			order: 3;
			flex: 1 50%;
			overflow: auto;
		}
			#stage-define-report .query-history .info .query {
				height: calc(100% - 38px);
			}
		#stage-define-report .edit-report-data {
			overflow: auto;
			width: 100%;
			border-top: 1px dashed var(--color-border);
			padding-top: calc(var(--gap) * 2);
		}
			#stage-define-report .edit-report-data table {
				background: var(--color-surface);
				color: var(--color-surface-text);
			}
				#stage-define-report .edit-report-data table thead th {
					position: sticky;
					top: 0;
				}
				#stage-define-report .edit-report-data table thead th:not(.action) {
					cursor: pointer;
					transition: background var(--transition-duration),
								box-shadow var(--transition-duration);
				}
				#stage-define-report .edit-report-data table thead th:not(.action):hover {
					background: var(--color-hover);
					color: var(--color-hover-text);
				}
				#stage-define-report .edit-report-data table thead th:not(.action):active {
					box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.5);
				}
				#stage-define-report .edit-report-data table tfoot {
					text-align: center;
					border-top: 1px solid var(--color-border);
					transition: background var(--transition-duration),
								box-shadow var(--transition-duration);
				}
				#stage-define-report .edit-report-data table tfoot:hover {
					background: var(--color-hover);
					color: var(--color-hover-text);
					cursor: pointer;
				}
				#stage-define-report .edit-report-data table tfoot:active {
					box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.2);
				}
#stage-pick-visualization table {
	background: var(--color-surface);
	box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
}

#stage-configure-visualization.show {
	display: grid;
	grid-template-rows: repeat(4, max-content);
	overflow: auto;
}
	#stage-configure-visualization .toolbar {
		padding: 0;
		position: sticky;
		top: 0;
		z-index: 7;
		background: var(--color-background);
		color: var(--color-background-text);
	}
	#stage-configure-visualization .toolbar .right {
		margin-left: auto;
	}
	.visualization-form h3 {
		border-bottom: 1px dashed var(--color-border);
		cursor: pointer;
		position: sticky;
		top: 28px;
		padding: var(--gap);
		margin: var(--gap) 0 calc(var(--gap) * 2);
		display: flex;
		align-items: center;
		font-size: 100%;
		font-weight: normal;
		z-index: 3;
		transition: color var(--transition-duration);
		background: var(--color-background);
		color: var(--color-background-text);
	}
	.visualization-form h3:hover {
		color: inherit;
	}
		.visualization-form h3 > i {
			margin-right: var(--gap);
			width: 10px;
			transition: margin-right var(--transition-duration);
		}
		.visualization-form h3:hover > i {
			margin-right: calc(var(--gap) * 2);
		}
	.visualization-form h4 {
		margin: 0 0 calc(var(--gap) * 2)
	}
	.visualization-form fieldset {
		background: var(--color-surface);
		color: var(--color-surface-text);
		margin: 0;
		border-radius: 3px;
		border: 0;
		box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
	}
		.visualization-form fieldset legend {
			font-size: 90%;
			padding: 5px 10px;
			border-radius: 5px;
			background: var(--color-secondary);
			color: var(--color-secondary-text);
			box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
			transition: background var(--transition-duration),
						color var(--transition-duration),
						box-shadow var(--transition-duration);
		}
		#stage-configure-visualization fieldset legend.interactive:hover {
			cursor: pointer;
		}
		#stage-configure-visualization fieldset legend.interactive:active {
			box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.25);
		}
		.visualization-form fieldset > .ellipsis {
			color: #ccc;
			text-align: center;
			transition: color var(--transition-duration);
		}
		.visualization-form fieldset > .ellipsis:not(.disabled):hover {
			color: #666;
			cursor: pointer;
		}
		.visualization-form fieldset > .form {
			padding: 0;
		}
		.visualization-form fieldset .form > .save {
			margin-top: calc(var(--gap) * 2);
		}
	.visualization-form .subform {
		display: grid;
		padding: calc(var(--gap) * 2);
		box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
		border-radius: 3px;
	}
		.visualization-form .subform .gradient-rules {
			display: grid;
			grid-gap: calc(var(--gap) * 2);
			align-items: center;
			overflow: auto;
			max-height: 200px;
		}
		.visualization-form .subform .gradient-rules::-webkit-scrollbar {
			height: 5px;
			width: 5px;
		}
/* ... */

